--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ form button {
 }
 
 #searchResult img{
-    width: 100px;
+    width: 100%;
     height: 230px;
     object-fit:cover;
     border-radius: 5px;
